working with line-drop issue on ie, ios

--- a/css/style.scss
+++ b/css/style.scss
@@ -71,10 +71,9 @@ p {
 .heading1 {
   font-size: $heading-1-size;
   font-weight: 400;
-  line-height: $heading-1-size * $line-height-multiplier;
   text-shadow: 1px 1px $primary-bg-color;
   letter-spacing: -1.4px;
-  margin: 0;
+  margin: -2px 0 0;
 }
 .heading2 {
   font-size: $heading-2-size;
@@ -87,12 +86,14 @@ p {
 //header
 .header-primary {
   color: $secondary-color;
-  min-height: $header-height;
+  height: $header-height;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
@@ -106,7 +107,7 @@ p {
   @media print {
     margin-top: 0;
   }
-  &::after {
+  &::before {
     content: '';
     background-color: $secondary-bg-color;
     position: absolute;
@@ -114,6 +115,12 @@ p {
     right: 0;
     height: $header-height;
     z-index: -1;
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      margin-top: -1rem; //silly ie11 bug
+    }
+    @media screen and (max-width: $breakpoint-large) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      margin-top: ( 1 * ($base-font-size / 1px))  / (($breakpoint-large / 1px) / 100) * -1vw; //silly ie11 bug
+    }
     @media screen and (max-width: $breakpoint-large) {
       height: ( (($header-height / 1rem) * ($base-font-size / 1px))  / (($breakpoint-large / 1px) / 100) ) * 1vw
     }
@@ -128,8 +135,7 @@ p {
 //footer
 .footer-primary {
   color: $tertiary-color;
-  background-color: $tertiary-bg-color;
-  min-height: $footer-height;
+  height: $footer-height;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -140,7 +146,7 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  &::after {
+  &::before {
     content: '';
     background-color: $tertiary-bg-color;
     position: absolute;
@@ -148,16 +154,19 @@ p {
     right: 0;
     height: $footer-height;
     z-index: -1;
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      margin-top: -1rem; //silly ie11 bug
+    }
   }
 }
 
-.footer-link {
+.footer-link,
+.footer-link:link,
+.footer-link:visited {
   float: right;
   text-decoration: none;
   color: $tertiary-color;
-  &:visited {
-    color: $tertiary-color;
-  }
+  background-color: $tertiary-bg-color;
   &:hover {
     color: $primary-bg-color;
     text-decoration: underline;
